--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'French drama'
 - !lcc 'PQ'
+- GITenberg
 title: Paternité
 url: http://www.gutenberg.org/ebooks/27626
